--- a/flexdashboard_bcrc.Rmd
+++ b/flexdashboard_bcrc.Rmd
@@ -72,6 +72,7 @@ $(document).ready(function(){
 
 # Sidebar {data-width=80, .sidebar}
 <ul id="sidebar_ul">
+  <li><a href="https://cnftstats.github.io/adapes.html">Adapes</a></li>
   <li id="currentProject"><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
   <li><a href="https://cnftstats.github.io/borgs.html">BorgsClub</a></li>
   <li><a href="https://cnftstats.github.io/chilledkongs.html">ChilledKongs</a></li>
@@ -90,16 +91,12 @@ $(document).ready(function(){
 .data_date_now <- .data_dates[length(.data_dates)]
 .data_date_after <- .data_dates[!(.data_dates %in% .data_date_now)]
 .data_date_after_hours <- difftime(.data_date_now, .data_date_after, units = "hours")
-.enoughData <- ifelse(all(.data_date_after_hours < .hours_ago), FALSE, TRUE)
-
-if(!.enoughData) cat("Not enough data at the moment, please come back later.")
 
 # Find data date collection closest to one hour after the first data collection
 .data_date_next <- .data_date_after[which.min(abs(.data_date_after_hours - .hours_ago))]
 .diff_minutes_now_next <- difftime(.data_date_now, .data_date_next, units = "mins")
-```
 
-```{r eval=.enoughData, fig.height=7, fig.width=10}
+# Plot
 X <- DTE[data_date %in% c(.data_date_now, .data_date_next)]
 X[, data_when := fcase(
   data_date == .data_date_now, "Now",
@@ -152,7 +149,7 @@ ggplot(X, aes(x_label, N, fill = market, alpha = data_when)) +
         legend.text = element_text(color = "grey50", size = 9),
         legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
         legend.box.spacing = unit(-10, "points"),
-        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 9),
+        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 8),
         plot.margin = unit(c(0, 15, 0, 0), units = "pt"))
 ```
 
@@ -240,14 +237,13 @@ datatable(X, class = 'compact stripe hover nowrap',
 ```
 
 # Rank {data-icon="fa-signal"}
-## Column 1 {data-width=500, .tabset}
+## Column 1 {data-width=600, .tabset}
 ### Listings x rank
 ```{r}
-max_y <- 25000
+max_y <- max(DT[, quantile(price, probs = .90)], DTS[, max(price)])
+min_y <- min(DT[, min(price)], DTS[, min(price)])
 X <- DT[price <= max_y]
-scale_x <- c(seq(0, 2000, 250), seq(2500, 10000, 500))
-scale_x[scale_x == 0] <- 1
-scale_x[scale_x == 10000] <- 9999
+scale_x <- c(1, seq(1000, 9000, 1000), 9999)
 gg <- ggplot(X, aes(asset_rank, price, shape = sc, customdata = link,
                     text = paste0(asset,
                                   "</br></br>", paste("Price:", price,
@@ -258,7 +254,7 @@ gg <- ggplot(X, aes(asset_rank, price, shape = sc, customdata = link,
                                                       "</br>Sc:", sc)))) +
   geom_point(color = "steelblue4", alpha = .6) +
   scale_x_reverse(breaks = scale_x, expand = c(0.03, 0)) +
-  scale_y_continuous(n.breaks = 15, limits = c(0, max_y)) +
+  scale_y_continuous(n.breaks = 15, limits = c(min_y, max_y)) +
   labs(x = "Rank", y = "Listing price", color = "Market", shape = "Smart contract") +
   theme(legend.title = element_text(size = 10))
 
@@ -268,28 +264,32 @@ ggplotly(gg, tooltip = "text") %>%
   onRender(js)
 ```
 
-> Only listings below `r max_y` ada are displayed. Try clicking on the legend or datapoints.
+> Only listings below `r as.character(max_y)` ada are displayed. Try clicking on the legend or datapoints.
 
 ### Sales x rank
 ```{r}
-max_y <- 25000
+max_y <- max(DT[, quantile(price, probs = .90)], DTS[, max(price)])
+min_y <- min(DT[, min(price)], DTS[, min(price)])
 X <- DTS[price <= max_y]
 X[, sold_time := trunc(sold_at_days)]
 X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago",
                        trunc(sold_at_days) == 1, "24-48h ago",
                        trunc(sold_at_days) == 2, "48-72h ago")]
-scale_x <- c(seq(0, 2000, 250), seq(2500, 10000, 500))
-scale_x[scale_x == 0] <- 1
-scale_x[scale_x == 10000] <- 9999
-
-gg <- ggplot(X, aes(asset_rank, price, color = sold_time, alpha = sold_time)) +
+scale_x <- c(1, seq(1000, 9000, 1000), 9999)
+gg <- ggplot(X, aes(asset_rank, price, color = sold_time, alpha = sold_time,
+                    text = paste0(asset,
+                                  "</br></br>", paste("Price:", price,
+                                                      "</br>Sold time:", sold_time,
+                                                      "</br>Rank:", asset_rank,
+                                                      "</br>Rarity:", asset_rarity,
+                                                      "</br>Market:", market)))) +
   geom_point(color = "springgreen4") +
   scale_x_reverse(breaks = scale_x, expand = c(0.03, 0)) +
-  scale_y_continuous(n.breaks = 15, limits = c(0, max_y)) +
+  scale_y_continuous(n.breaks = 15, limits = c(min_y, max_y)) +
   scale_alpha_manual(values = c("0-24h ago" = 1,
                                 "24-48h ago" = 0.6,
                                 "48-72h ago" = 0.2)) +
-  labs(x = "Rank", y = "Sold price", color = "When") +
+  labs(x = "Rank", y = "Sold price", color = "Sold time", alpha = "Sold time") +
   theme(legend.title = element_text(size = 10))
 
 ggplotly(gg, tooltip = "text") %>% 
@@ -297,102 +297,102 @@ ggplotly(gg, tooltip = "text") %>%
          xaxis = list(tickangle = 45))
 ```
 
-> Only listings below `r max_y` ada are displayed.
+> Only listings below `r as.character(max_y)` ada are displayed.
 
-### Listings distribution by rank range
-```{r fig.height=7, fig.width=8}
-X <- copy(DT)
-X <- X[complete.cases(rank_range), .(rank_range, market)]
-X <- X[, .N, .(rank_range, market)][order(rank_range)]
-num_listings <- nrow(X)
+<!-- ### Listings distribution by rank range -->
+<!-- ```{r fig.height=7, fig.width=8} -->
+<!-- X <- copy(DT) -->
+<!-- X <- X[complete.cases(rank_range), .(rank_range, market)] -->
+<!-- X <- X[, .N, .(rank_range, market)][order(rank_range)] -->
+<!-- num_listings <- nrow(X) -->
 
-X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
-X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))]
+<!-- X[, market := factor(market, levels = c("jpg.store", "cnft.io"))] -->
+<!-- X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))] -->
 
-ggplot(X, aes(rank_range, N, fill = market)) +
-  geom_hline(yintercept = 0, color = "grey70") +
-  geom_bar(stat = "identity", alpha = .8) +
-  geom_text(aes(label = stat(y), group = rank_range),
-            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
-            color = "steelblue4", size = 3) +
-  scale_y_continuous(expand = c(0, 20)) +
-  scale_fill_manual(values = c("jpg.store" = "steelblue3", "cnft.io" = "steelblue4")) +
-  labs(x = "Rank range", y = "Number of listings", fill = "",
-       caption = sprintf("Floor: %d ada  |  Listings: %d\nSource: https://cnftstats.github.io/",
-                         min(DT$price), num_listings)) +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
-                                   color = "grey50", size = 8),
-        axis.text.y = element_text(color = "grey50", size = 8),
-        axis.title = element_text(color = "grey30", size = 9),
-        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
-        legend.text = element_text(color = "grey50", size = 9),
-        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
-        legend.box.spacing = unit(-10, "points"),
-        plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8),
-        # plot.margin = unit(c(0, 15, 0, 0), units = "pt"),
-        panel.spacing.y = unit(1, "lines"))
-```
+<!-- ggplot(X, aes(rank_range, N, fill = market)) + -->
+<!--   geom_hline(yintercept = 0, color = "grey70") + -->
+<!--   geom_bar(stat = "identity", alpha = .8) + -->
+<!--   geom_text(aes(label = stat(y), group = rank_range), -->
+<!--             stat = 'summary', fun = sum, vjust = -.5, hjust = +.55, -->
+<!--             color = "steelblue4", size = 3) + -->
+<!--   scale_y_continuous(expand = c(0, 20)) + -->
+<!--   scale_fill_manual(values = c("jpg.store" = "steelblue3", "cnft.io" = "steelblue4")) + -->
+<!--   labs(x = "Rank range", y = "Number of listings", fill = "", -->
+<!--        caption = sprintf("Floor: %d ada  |  Listings: %d\nSource: https://cnftstats.github.io/", -->
+<!--                          min(DT$price), num_listings)) + -->
+<!--   theme_minimal() + -->
+<!--   theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0, -->
+<!--                                    color = "grey50", size = 8), -->
+<!--         axis.text.y = element_text(color = "grey50", size = 8), -->
+<!--         axis.title = element_text(color = "grey30", size = 9), -->
+<!--         legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal", -->
+<!--         legend.text = element_text(color = "grey50", size = 9), -->
+<!--         legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"), -->
+<!--         legend.box.spacing = unit(-10, "points"), -->
+<!--         plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8), -->
+<!--         # plot.margin = unit(c(0, 15, 0, 0), units = "pt"), -->
+<!--         panel.spacing.y = unit(1, "lines")) -->
+<!-- ``` -->
 
-### Sales distribution by rank range
-```{r fig.height=9, fig.width=9}
-X <- copy(DTS)
-X[, sold_time := trunc(sold_at_days)]
-X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago",
-                       trunc(sold_at_days) == 1, "24-48h ago",
-                       trunc(sold_at_days) == 2, "48-72h ago")]
-X <- X[complete.cases(rank_range), .(rank_range, market, sold_time)]
-X <- X[, .N, .(rank_range, market, sold_time)][order(rank_range)]
-X[, sold_time := sprintf("%s\nSales: %s", sold_time, sum(N)), sold_time]
+<!-- ### Sales distribution by rank range -->
+<!-- ```{r fig.height=9, fig.width=9} -->
+<!-- X <- copy(DTS) -->
+<!-- X[, sold_time := trunc(sold_at_days)] -->
+<!-- X[, sold_time := fcase(trunc(sold_at_days) == 0, "0-24h ago", -->
+<!--                        trunc(sold_at_days) == 1, "24-48h ago", -->
+<!--                        trunc(sold_at_days) == 2, "48-72h ago")] -->
+<!-- X <- X[complete.cases(rank_range), .(rank_range, market, sold_time)] -->
+<!-- X <- X[, .N, .(rank_range, market, sold_time)][order(rank_range)] -->
+<!-- X[, sold_time := sprintf("%s\nSales: %s", sold_time, sum(N)), sold_time] -->
 
-X[, market := factor(market, levels = c("jpg.store", "cnft.io"))]
-X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))]
+<!-- X[, market := factor(market, levels = c("jpg.store", "cnft.io"))] -->
+<!-- X[, rank_range := factor(rank_range, levels = rev(levels(rank_range)))] -->
 
-ggplot(X, aes(rank_range, N, fill = market)) +
-  facet_grid(sold_time~.) +
-  geom_hline(yintercept = 0, color = "grey70") +
-  geom_bar(stat = "identity", alpha = .8) +
-  geom_text(aes(label = stat(y), group = rank_range),
-            stat = 'summary', fun = sum, vjust = -.5, hjust = +.55,
-            color = "springgreen4", size = 3) +
-  scale_y_continuous(expand = c(0, 20)) +
-  scale_fill_manual(values = c("jpg.store" = "springgreen3", "cnft.io" = "springgreen4")) +
-  labs(x = "Rank range", y = "Number of sales", fill = "",
-       caption = "Source: https://cnftstats.github.io/") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0,
-                                   color = "grey50", size = 8),
-        axis.text.y = element_text(color = "grey50", size = 8),
-        axis.title = element_text(color = "grey30", size = 9),
-        legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal",
-        legend.text = element_text(color = "grey50", size = 9),
-        legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
-        legend.box.spacing = unit(-10, "points"),
-        plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8),
-        # plot.margin = unit(c(0, 15, 0, 0), units = "pt"),
-        panel.spacing.y = unit(1, "lines"))
-```
+<!-- ggplot(X, aes(rank_range, N, fill = market)) + -->
+<!--   facet_grid(sold_time~.) + -->
+<!--   geom_hline(yintercept = 0, color = "grey70") + -->
+<!--   geom_bar(stat = "identity", alpha = .8) + -->
+<!--   geom_text(aes(label = stat(y), group = rank_range), -->
+<!--             stat = 'summary', fun = sum, vjust = -.5, hjust = +.55, -->
+<!--             color = "springgreen4", size = 3) + -->
+<!--   scale_y_continuous(expand = c(0, 20)) + -->
+<!--   scale_fill_manual(values = c("jpg.store" = "springgreen3", "cnft.io" = "springgreen4")) + -->
+<!--   labs(x = "Rank range", y = "Number of sales", fill = "", -->
+<!--        caption = "Source: https://cnftstats.github.io/") + -->
+<!--   theme_minimal() + -->
+<!--   theme(axis.text.x = element_text(angle = -45, vjust = +.5, hjust = 0, -->
+<!--                                    color = "grey50", size = 8), -->
+<!--         axis.text.y = element_text(color = "grey50", size = 8), -->
+<!--         axis.title = element_text(color = "grey30", size = 9), -->
+<!--         legend.position = "bottom", legend.justification = 'right', legend.direction = "horizontal", -->
+<!--         legend.text = element_text(color = "grey50", size = 9), -->
+<!--         legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"), -->
+<!--         legend.box.spacing = unit(-10, "points"), -->
+<!--         plot.caption = element_text(color = "#008B8B", vjust = +17, hjust = 0, size = 8), -->
+<!--         # plot.margin = unit(c(0, 15, 0, 0), units = "pt"), -->
+<!--         panel.spacing.y = unit(1, "lines")) -->
+<!-- ``` -->
 
 
-## Column 2 {data-width=500, .tabset}
+## Column 2 {data-width=400}
 ### Floor listings by rank range
 ```{r}
 X <- DT[, .SD[price == min(price)], rank_range][order(rank_range)]
 X[, img := sprintf('<img src="%s%d.png" class="img_html">', img_link, asset_number)]
 X[, img := sprintf('<a href="%s" target="_blank">%s</br>#%s</a>', link, img, asset_number)]
 
-X <- X[, .(rank_range, img, price, asset_rank, asset_rarity, sc, market, asset_traits_num, asset_traits)]
+X <- X[, .(rank_range, img, price, asset_rank, asset_rarity, sc, market)]
 X <- X[complete.cases(X)]
 
 datatable(X, class = 'compact stripe hover',
-          options = list(pageLength = 100,
+          options = list(dom = "t",
+                         pageLength = 100,
                          scrollY = '100%',
                          bLengthChange = FALSE,
                          bPaginate = FALSE,
                          info = FALSE,
                          columnDefs = list(list(className = 'dt-right', targets = "_all"))),
-          colnames = c("Rank</br>range", "Asset", "Price", "Rank", "Rarity", "Sc", "Market",
-                       "Num.</br>traits", "Traits"),
+          colnames = c("Rank range", "Asset", "Price", "Rank", "Rarity", "Sc", "Market"),
           rownames = FALSE,
           escape = FALSE) %>%
   formatStyle(columns = 1:ncol(X), fontSize = '90%')
