--- a/flexdashboard_chilledkongs.Rmd
+++ b/flexdashboard_chilledkongs.Rmd
@@ -71,6 +71,7 @@ $(document).ready(function(){
 
 # Sidebar {data-width=80, .sidebar}
 <ul id="sidebar_ul">
+  <li><a href="https://cnftstats.github.io/adapes.html">Adapes</a></li>
   <li><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
   <li><a href="https://cnftstats.github.io/borgs.html">BorgsClub</a></li>
   <li id="currentProject"><a href="https://cnftstats.github.io/chilledkongs.html">ChilledKongs</a></li>
@@ -90,17 +91,12 @@ $(document).ready(function(){
 .data_date_now <- .data_dates[length(.data_dates)]
 .data_date_after <- .data_dates[!(.data_dates %in% .data_date_now)]
 .data_date_after_hours <- difftime(.data_date_now, .data_date_after, units = "hours")
-.enoughData <- ifelse(all(.data_date_after_hours < .hours_ago), FALSE, TRUE)
-
-if(!.enoughData) cat("Not enough data at the moment, please come back later.")
 
 # Find data date collection closest to one hour after the first data collection
 .data_date_next <- .data_date_after[which.min(abs(.data_date_after_hours - .hours_ago))]
 .diff_minutes_now_next <- difftime(.data_date_now, .data_date_next, units = "mins")
-```
 
-
-```{r eval=.enoughData, fig.height=7, fig.width=10}
+# Plot
 X <- DTE[data_date %in% c(.data_date_now, .data_date_next)]
 X[, data_when := fcase(
   data_date == .data_date_now, "Now",
@@ -154,7 +150,7 @@ ggplot(X, aes(x_label, N, fill = market, alpha = data_when)) +
         legend.text = element_text(color = "grey50", size = 9),
         legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
         legend.box.spacing = unit(-10, "points"),
-        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 9),
+        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 8),
         plot.margin = unit(c(0, 15, 0, 0), units = "pt"))
 ```
 
@@ -250,10 +246,10 @@ This data is not available for this project.
 ### Floor listings by trait
 ```{r}
 X <- DTL[, .SD[price == min(price)], .(trait_category, trait)][order(trait_category, trait)]
-X[, img := sprintf('<img src="%s%d.png" class="img_html">', img_link, asset_number)]
-X[, img := sprintf('<a href="%s" target="_blank">%s</br>#%s</a>', link, img, asset_number)]
+X[, img := sprintf('<img src="%s%s.png" class="img_html">', img_link, gsub("adape", "", asset_name))]
+X[, img := sprintf('<a href="%s" target="_blank">%s</br>#%s</a>', link, img, gsub("adape", "", asset_name))]
 
-X <- X[, .(trait_category, trait, img, price, sc, market, asset_traits_num, asset_traits)]
+X <- X[, .(trait_category, trait, img, price, market, asset_traits)]
 
 X <- X[order(-price)]
 X <- X[complete.cases(X)]
@@ -266,8 +262,7 @@ datatable(X, class = 'compact stripe hover',
                          bPaginate = FALSE,
                          info = FALSE,
                          columnDefs = list(list(className = 'dt-right', targets = "_all"))),
-          colnames = c("Trait</br>category", "Trait", "Asset", "Price", "Sc", "Market",
-                       "Num.</br>traits", "Traits"),
+          colnames = c("Trait</br>category", "Trait", "Asset", "Price", "Market", "Traits"),
           filter = "top",
           rownames = FALSE,
           escape = FALSE) %>%
@@ -279,7 +274,7 @@ datatable(X, class = 'compact stripe hover',
 ### Find your NFT rank and rarity
 ```{r}
 # ion-information-circled
-X <- RAR[, .(asset_name, asset_traits_num, asset_traits)]
+X <- RAR[, .(asset_name, asset_rank, asset_traits)]
 datatable(X, class = 'compact stripe hover',
           options = list(pageLength = 30,
                          scrollY = '100%',
@@ -287,7 +282,7 @@ datatable(X, class = 'compact stripe hover',
                          bPaginate = TRUE,
                          info = TRUE,
                          columnDefs = list(list(className = 'dt-right', targets = "_all"))),
-          colnames = c("Asset", "Num.</br>traits", "Traits"),
+          colnames = c("Asset", "Rank", "Traits"),
           rownames = FALSE,
           escape = FALSE) %>%
   formatStyle(columns = 1:ncol(X), fontSize = '90%')
@@ -340,32 +335,6 @@ Tips would also be greatly appreciated! This would encourage me to maintain and 
 
 
 ## Column 3
-### Changelog
-#### Version 1.0
-- This is the first version of this website! More to come soon
-
-#### Version 1.1
-- Added the Mocossi project
-- Improvements on how often the website updates
-#### Version 1.2
-- Sweep floor section added
-
-#### Version 1.3
-- Added the Space Ape Club project
-
-#### Version 1.4
-- Improved the floor section
-- Removed the rarity section as it was very much redundant with the rank section
-
-#### Version 1.5
-- Added the Chilled Kongs project
-
-#### Version 1.6
-- Added the Pavia project (not that it takes more time to update than the other projects)
-
-#### Version 1.7
-- Stats about sales
-
 ### About me
 - I am passionate about crypto, (c)nfts, stats, and programming!
 - Hit me on discord: <a href="https://discord.com/users/K2#8332/" target="_blank">K2#8332</a>
