--- a/flexdashboard_pavia.Rmd
+++ b/flexdashboard_pavia.Rmd
@@ -60,6 +60,7 @@ $(document).ready(function(){
 
 # Sidebar {data-width=80, .sidebar}
 <ul id="sidebar_ul">
+  <li><a href="https://cnftstats.github.io/adapes.html">Adapes</a></li>
   <li><a href="https://cnftstats.github.io/bcrc.html">BCRC</a></li>
   <li><a href="https://cnftstats.github.io/borgs.html">BorgsClub</a></li>
   <li><a href="https://cnftstats.github.io/chilledkongs.html">ChilledKongs</a></li>
@@ -130,7 +131,7 @@ ggplot(X, aes(x_label, N, fill = market, alpha = data_when)) +
         legend.text = element_text(color = "grey50", size = 9),
         legend.key.height = unit(0.5, "points"), legend.key.width = unit(10, "points"),
         legend.box.spacing = unit(-10, "points"),
-        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 9),
+        plot.caption = element_text(color = "#008B8B", vjust = +15, hjust = 0, size = 8),
         plot.margin = unit(c(0, 15, 0, 0), units = "pt"))
 ```
 
@@ -576,29 +577,6 @@ Tips would also be greatly appreciated! This would encourage me to maintain and 
 
 
 ## Column 3
-### Changelog
-#### Version 1.0
-- This is the first version of this website! More to come soon
-
-#### Version 1.1
-- Added the Mocossi project
-- Improvements on how often the website updates
-#### Version 1.2
-- Sweep floor section added
-
-#### Version 1.3
-- Added the Space Ape Club project
-
-#### Version 1.4
-- Improved the floor section
-- Removed the rarity section as it was very much redundant with the rank section
-
-#### Version 1.5
-- Added the Chilled Kongs project
-
-### Version 1.6
-- Added the Pavia project (not that it takes more time to update than the other projects)
-
 ### About me
 - I am passionate about crypto, (c)nfts, stats, and programming!
 - Hit me on discord: <a href="https://discord.com/users/K2#8332/" target="_blank">K2#8332</a>
